--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -257,7 +257,7 @@
                             <div class="icons-block">
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/hitPiercePunch.svg" class="ng-scope" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{hitPiercePunch}}</span>
@@ -265,7 +265,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/hitChopPunch.svg" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{hitChopPunch}}</span>
@@ -273,14 +273,14 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/rangedHit.svg" class="ng-scope tooltips" height="40" width="40">
                                         <span class="ng-binding ng-scope">{{rangedHit}}</span>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{parryPiercePunch}}</span>
@@ -288,7 +288,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/parryChopPunch.svg" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{parryChopPunch}}</span>
@@ -296,14 +296,14 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/dodge.svg" class="ng-scope tooltips" height="40" width="40">
                                         <span class="ng-binding ng-scope">{{dodge}}</span>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество физических действий, совершаемых в раунд (удары, парирование, уклонение). Равно меньшему значению из скорости и интеллекта персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество физических действий, совершаемых в раунд (удары, парирование, уклонение). Равно меньшему значению из скорости и интеллекта персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/generalActionPoints.svg" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{generalActionPoints}}</span>
@@ -311,7 +311,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/mentalActionPoints.png" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{mentalActionPoints}}</span>
@@ -319,7 +319,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
                                     <div class="icon-atr"
-                                         title="Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20" data-toggle="tooltip" data-placement="right">
+                                         title="Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/endurancePoints.svg" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{endurancePoints}}</span>
@@ -327,7 +327,7 @@
                                 </div>
                                 <div class="col-md-12 col-sm-12 col-xs-12 text-center" style="cursor: pointer">
                                     <div class="icon-atr"
-                                         title="Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа" data-toggle="tooltip" data-placement="right">
+                                         title="Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа"  rel="tooltip">
                                         <img src="/assets/common/img/erilon-icon/initiative.svg" class="ng-scope tooltips" height="40"
                                              width="40">
                                         <span class="ng-binding ng-scope">{{initiative}}</span>
@@ -344,9 +344,59 @@
                         <h3 class="panel-heading" style="margin-bottom: 0">Характеристики</h3>
                         <div class="panel-body">
                             <div class="icons-block">
-                                <div class="col-md-4 col-sm-12 col-xs-12" ng-repeat="personageAttribute in personageAttributes">
-                                    <h4 style="font-family: 'Josefin Slab'">
-                                        {{personageAttribute.Attribute.name}}: {{personageAttribute.value}}
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[0].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[1].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[2].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[3].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[4].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[5].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[6].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[7].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[8].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[9].Attribute.name}}: {{personageAttributes[0].value}}
+                                    </h4>
+                                </div>
+                                <div class="col-md-4 col-sm-12 col-xs-12">
+                                    <h4 class="icon-char" style="font-family: 'Josefin Slab'; cursor: pointer;" rel="tooltip" title="Описание аттрибута">
+                                        {{personageAttributes[10].Attribute.name}}: {{personageAttributes[0].value}}
                                     </h4>
                                 </div>
                             </div>
