--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -103,7 +103,7 @@
     <script type="text/javascript" src="assets/common/js/demo.temp.js"></script>
     <script type="text/javascript" src="views/login/login.js"></script>
 </head>
-<body class="theme-default menu-top menu-static theme-dark" ng-app="loginApp">
+<body class="theme-default menu-top menu-static theme-blue" ng-app="loginApp">
 <section class="page-content" ng-controller="loginController">
 <div class="page-content-inner">
 
