--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -105,7 +105,7 @@
     <script src="personage_manager.js"></script>
     <script src="permissions/check_player_permissions.js"></script>
 </head>
-<body class="theme-default menu-top theme-dark" ng-app="personageManagerApp">
+<body class="theme-default menu-top theme-blue mode-material" ng-app="personageManagerApp">
 <div class="boxed-container" ng-controller="permissionsController">
 
     <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
