--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -360,7 +360,138 @@
                 <div class="panel">
                     <div class="panel-heading"></div>
                     <div class="panel-body">
+                        <div class="nav-tabs-horizontal">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="javascript: void(0);" data-toggle="tab" data-target="#attr" role="tab">Атрибуты</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="javascript: void(0);" data-toggle="tab" data-target="#sk" role="tab">Навыки</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="javascript: void(0);" data-toggle="tab" data-target="#adv" role="tab">Особенности</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content" ng-controller="personageAttributesController">
+                                <div id="attr" class="tab-pane active" role="tabpanel">
+                                    <table id="attrTable" class="table table-hover">
+                                        <tr ng-repeat="personageAttribute in personageAttributes">
+                                            <td>{{ personageAttribute.Attribute.name}}</td>
+                                            <td>
+                                                <div class="btn-group btn-group-justified pull-right" style="width: 150px">
+                                                    <div class="btn-group">
+                                                        <button class="btn btn-rounded btn-sm btn-secondary"
+                                                                ng-click="decreaseAttribute(personageAttribute.id)"
+                                                                type="button">
+                                                            <i class="icmn-minus"></i>
+                                                        </button>
+                                                    </div>
+                                                    <div class="btn-group">
+                                                        <button class="btn btn-rounded btn-sm btn-primary"
+                                                                ng-click="increaseAttribute(personageAttribute.id)"
+                                                                type="button">
+                                                            <i class="icmn-plus"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>{{ personageAttribute.value }}</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div id="sk" class="tab-pane" role="tabpanel">
+                                    Навыки
+                                    <ul class="nav nav-tabs" role="tablist">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="javascript: void(0);" data-toggle="tab" data-target="#attached" role="tab">Прикрепленные</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="javascript: void(0);" data-toggle="tab" data-target="#trigger" role="tab" ng-click="getPersonageTriggerSkills()">Тригерные</a>
+                                        </li>
+                                    </ul>
+                                    <div class="tab-content">
+                                        <div id="attached" class="tab-pane active" role="tabpanel">
+                                            Прикреп
+                                        </div>
+                                        <div id="trigger" class="tab-pane table-responsive" role="tabpanel">
+                                            <table class="table table-hover">
+                                                <tr>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th class="text-center">Уровень</th>
+                                                    <th class="text-center">Талант</th>
+                                                    <th class="text-center">Учитель</th>
+                                                    <th></th>
+                                                </tr>
+                                                <tr ng-repeat="personageTriggerSkill in personageTriggerSkills">
+                                                    <td>
+                                                        {{personageTriggerSkill.TriggerSkill.name}}
+                                                    </td>
 
+                                                    <td>
+                                                        <div class="btn-group btn-group-justified pull-right width-150">
+                                                            <div class="btn-group">
+                                                                <button class="btn btn-rounded btn-sm btn-secondary"
+                                                                        ng-click="increaseTriggerSkillLevel(personageTriggerSkill.TriggerSkill.id)"
+                                                                        type="button">
+                                                                    <i class="icmn-minus"></i>
+                                                                </button>
+                                                            </div>
+                                                            <div class="btn-group">
+                                                                <button class="btn btn-rounded btn-sm btn-primary"
+                                                                        ng-click="decreaseTriggerSkillLevel(personageTriggerSkill.TriggerSkill.id)"
+                                                                        type="button">
+                                                                    <i class="icmn-plus"></i>
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+
+                                                    <td class="text-center">
+                                                        <div ng-if="personageTriggerSkill.currentLevel == 1">
+                                                            Эксперт
+                                                        </div>
+                                                        <div ng-if="personageTriggerSkill.currentLevel == 2">
+                                                            Мастер
+                                                        </div>
+                                                        <div ng-if="personageTriggerSkill.currentLevel == 3">
+                                                            Магистр
+                                                        </div>
+                                                        <div ng-if="personageTriggerSkill.currentLevel == 4">
+                                                            Гроссмейстер
+                                                        </div>
+                                                    </td>
+
+                                                    <td class="text-center" ng-show="personageTriggerSkill.talented">
+                                                        <i class="icmn-checkmark4"></i>
+                                                    </td>
+
+                                                    <td class="text-center" ng-show="!personageTriggerSkill.talented">
+                                                        <i class="icmn-cross3"></i>
+                                                    </td>
+
+                                                    <td class="text-center">
+                                                        <div class="checkbox">
+                                                            <input name="tutored" type="checkbox" ng-model="personageTriggerSkill.tutored">
+                                                        </div>
+                                                    </td>
+
+                                                    <td>
+                                                        <div ng-if="personageTriggerSkill.currentLevel == 0">
+                                                            <button class="btn btn-icon btn-link icmn-cross"
+                                                                    type="button" ng-click="deletePersonageTriggerSkill(personageTriggerSkill)">
+
+                                                            </button>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="adv" class="tab-pane" role="tabpanel"> Особ контент</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
